Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
None
-
linux fc6
Description
When apache is used with In-Out message, valgrind complains about "Conditional jump or move depends on uninitialised value(s)"
Here is the backtrace:
==17491== Thread 5:
==17491== Conditional jump or move depends on uninitialised value(s)
==17491== at 0x40169FC: axis2_apache_out_transport_info_set_char_encoding (apache2_out_transport_info.c:110)
==17491== by 0x46D6ABB: axis2_http_out_transport_info_set_char_encoding (http_out_transport_info.c:238)
==17491== by 0x484582E: axis2_http_transport_sender_invoke (http_transport_sender.c:342)
==17491== by 0x461D862: axis2_engine_send (engine.c:176)
==17491== by 0x462C716: axis2_msg_recv_receive_impl (msg_recv.c:359)
==17491== by 0x462C83A: axis2_msg_recv_receive (msg_recv.c:436)
==17491== by 0x461DE74: axis2_engine_receive (engine.c:318)
==17491== by 0x401AB5B: axis2_http_transport_utils_process_http_post_request (http_transport_utils.c:659)
==17491== by 0x4018325: axis2_apache2_worker_process_request (apache2_worker.c:619)
==17491== by 0x4015752: axis2_handler (mod_axis2.c:373)
==17491== by 0x8071B27: ap_run_handler (in /usr/local/apache2/bin/httpd)
==17491== by 0x8073FEF: ap_invoke_handler (in /usr/local/apache2/bin/httpd)