Fix for issue AXIS2C-1241